--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,10 +8,11 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/>
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name" android:icon="@drawable/ic"
+                 android:logo="@drawable/ic">
         <activity android:name="MyActivity"
-                  android:label="@string/app_name"
                   android:screenOrientation="portrait"
                 >
             <intent-filter>
