--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application android:label="@string/app_name" android:icon="@drawable/ic"
                  android:logo="@drawable/ic">
@@ -41,9 +42,7 @@
             </intent-filter>
         </receiver>
 
-        <!--<service android:name=".testService" android:enabled="true" />-->
-
-        <service android:name=".callService" android:enabled="true" ></service>
+        <!--<service android:name=".phoneService" android:enabled="true" ></service>-->
 
     </application>
 </manifest>
