--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,10 +5,11 @@
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="15"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_SMS" />
-    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_SMS"/>
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
 
     <application android:label="@string/app_name" android:icon="@drawable/ic"
@@ -36,11 +37,17 @@
                 >
         </activity>
 
-        <receiver android:name="callInterceptor">
+        <receiver android:enabled="true"
+                  android:name=".callInterceptor"
+                  android:permission="android.permission.RECEIVE_BOOT_COMPLETED"
+                >
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </receiver>
+
 
         <!--<service android:name=".phoneService" android:enabled="true" ></service>-->
 
