--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,14 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.hz.howpeople"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="1.0"
+        >
     <uses-sdk android:minSdkVersion="15"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.READ_SMS"/>
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
+
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/>
+
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
+    <uses-permission android:name="android.permission.GET_TASKS" />
 
 
     <application android:label="@string/app_name" android:icon="@drawable/ic"
@@ -39,17 +44,15 @@
 
         <receiver android:enabled="true"
                   android:name=".callInterceptor"
-                  android:permission="android.permission.RECEIVE_BOOT_COMPLETED"
                 >
             <intent-filter>
-                <action android:name="android.intent.action.PHONE_STATE"/>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
             </intent-filter>
         </receiver>
 
 
-        <!--<service android:name=".phoneService" android:enabled="true" ></service>-->
+        <service android:name=".phoneService" android:enabled="true" ></service>
 
     </application>
 </manifest>
