--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,6 +42,12 @@
                 >
         </activity>
 
+        <activity android:name=".list.ui.SearchActivity"
+                  android:label="@string/app_name"
+                  android:screenOrientation="portrait"
+                >
+        </activity>
+
         <receiver android:enabled="true"
                   android:name=".callInterceptor"
                 >
